--- a/terms.html
+++ b/terms.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and conditions</title>
+    <link rel="stylesheet" href="./css/terms.css">
 </head>
 <body>
     <h1>Lorem, ipsum dolor.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus assumenda temporibus non rerum alias veritatis nobis a, provident illum enim tenetur expedita repellat cumque fuga aperiam molestiae at sunt necessitatibus officiis tempora beatae facilis quis laborum. Ut doloribus, eaque nemo in quam harum dicta reprehenderit quibusdam odit obcaecati autem natus.</p>
-    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste architecto laudantium eum quod pariatur eius blanditiis, fugit vitae sint amet nisi cupiditate rerum officiis odit optio impedit. Ab, nesciunt quae?</P>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste architecto laudantium eum quod pariatur eius blanditiis, fugit vitae sint amet nisi cupiditate rerum officiis odit optio impedit. Ab, nesciunt quae?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit in facere asperiores labore corporis aliquid, ad quos porro blanditiis maxime assumenda tenetur. Cupiditate sequi soluta numquam quidem eveniet officia laudantium vel, amet sit nisi fugit, consectetur consequuntur inventore iusto quod exercitationem illum magnam veniam optio saepe? Repellendus beatae quia, doloremque aperiam voluptatibus pariatur tempore aspernatur blanditiis odio ad nulla delectus dicta eos eaque earum officiis incidunt velit est expedita optio aut sapiente? Hic quam non et odio facere aperiam aut esse nihil, dolore consequatur sunt consectetur consequuntur dolor commodi perferendis asperiores eaque fuga, eos eius possimus iste exercitationem minima perspiciatis!</p>
+    <a href="./index.html">Back to the main</a>
 </body>
 </html>
