--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <h1>REGISTER</h1>
+            <div class="inputsContainer">
+                <input type="text" id="" placeholder="First name">
+                <input type="text" id="" placeholder="Last name">
+            </div>
+            <input type="text" id="" placeholder="Email">
+            <input type="password" id="" placeholder="Password">
+            <input type="password" id="" placeholder="Confirm Password">
+        </div>
+    </main>
 </body>
 </html>
