--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registracija</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -19,6 +19,8 @@
             <input type="text" id="" placeholder="Email">
             <input type="password" id="" placeholder="Password">
             <input type="password" id="" placeholder="Confirm Password">
+            <input type="checkbox" name="" id="cb"><Label for="cb">I accept</Label>
+            <a href="./terms.html">Terms of Use</a>
         </div>
     </main>
 </body>
