--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
             <input type="text" id="" placeholder="Email">
             <input type="password" id="" placeholder="Password">
             <input type="password" id="" placeholder="Confirm Password">
-            <input type="checkbox" name="" id="cb"><Label for="cb">I accept</Label>
-            <a href="./terms.html">Terms of Use</a>
+            <div id="cbContainer">
+                <input type="checkbox" name="" id="cb">
+            </div>
+            <div id="textsContainer">
+                <Label for="cb">I accept</Label>
+                <a href="./terms.html">Terms of Use</a>
+            </div>
+            <button>REGISTER NOW</button>
         </div>
     </main>
 </body>
